--- a/5. KIds Course/kids_course/pubspec.yaml
+++ b/5. KIds Course/kids_course/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  provider: ^4.0.4
+  provider: ^3.0.3+1
 
 dev_dependencies:
   flutter_test:
@@ -43,8 +43,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/bouncy_loader.gif
-   - assets/logo.gif
+    - assets/logo.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
