--- a/5. KIds Course/kids_course/pubspec.yaml
+++ b/5. KIds Course/kids_course/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   provider: ^3.0.3+1
+  firebase_auth: ^0.15.5+3
 
 dev_dependencies:
   flutter_test:
