--- a/5. KIds Course/kids_course/pubspec.yaml
+++ b/5. KIds Course/kids_course/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  carousel_slider: ^1.3.1
 
 
 # For information on the generic Dart part of this file, see the
