--- a/5. KIds Course/kids_course/pubspec.yaml
+++ b/5. KIds Course/kids_course/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: ^3.0.3+1
   firebase_auth: ^0.15.5+3
+  cloud_firestore: ^0.12.11
+  sqflite:
+  path:
 
 dev_dependencies:
   flutter_test:
