--- a/5. KIds Course/kids_course/android/app/src/main/AndroidManifest.xml
+++ b/5. KIds Course/kids_course/android/app/src/main/AndroidManifest.xml
@@ -26,5 +26,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBLNmEuhLdEm1PSNuKiGFiQ-KkaCcA6xaQ"/>
     </application>
 </manifest>
