--- a/0. James_flutter youtube/Youtube_practice/f8_tutorial_widget/pubspec.yaml
+++ b/0. James_flutter youtube/Youtube_practice/f8_tutorial_widget/pubspec.yaml
@@ -1,5 +1,9 @@
-name: kids_course
-description: 보육교사들을 위한 차량운행 코스작성 어플리케이션 입니다.
+name: f8tutorialwidget
+description: 다양한 위젯들을 이용하여 구성
+
+# The following line prevents the package from being accidentally published to
+# pub.dev using `pub publish`. This is preferred for private packages.
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -14,27 +18,20 @@ description: 보육교사들을 위한 차량운행 코스작성 어플리케이
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter: ^0.5.21+8
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  provider: ^3.0.3+1
-  firebase_auth: ^0.15.5+3
-  cloud_firestore: ^0.12.11
-  sqflite:
-  path:
+  cupertino_icons: ^0.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  carousel_slider: ^1.3.1
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,8 +45,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
