--- a/0. James_flutter youtube/flutter_study/f5/pubspec.yaml
+++ b/0. James_flutter youtube/flutter_study/f5/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   http: ^0.12.1
+  flutter_webview_plugin: ^0.3.11
 
 dev_dependencies:
   flutter_test:
