--- a/0. James_flutter youtube/flutter_study/f6/pubspec.yaml
+++ b/0. James_flutter youtube/flutter_study/f6/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   http: ^0.12.1
   socket_io_client:
+  vibration: ^1.4.0
+  firebase_messaging: ^6.0.16
 
 dev_dependencies:
   flutter_test:
