--- a/0. James_flutter youtube/flutter_study/f10/pubspec.yaml
+++ b/0. James_flutter youtube/flutter_study/f10/pubspec.yaml
@@ -1,5 +1,5 @@
-name: pkidscoures
-description: 키즈 코스 프로젝트
+name: f10
+description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -28,12 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  kopo: ^0.1.1
-  http: ^0.12.1
-  vibration: ^1.4.0
-  firebase_messaging: ^6.0.16
   provider:
-  flutter_bloc: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -50,8 +45,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  assets:
-  - images/
+  # To add assets to your application, add an assets section, like this:
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
