--- a/P. Kids Course/p_kids_coures/pubspec.yaml
+++ b/P. Kids Course/p_kids_coures/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_messaging: ^6.0.16
   provider:
   flutter_bloc: ^2.1.1
+  sqflite: ^1.3.0
+  fancy_bottom_navigation: ^0.3.2
 
 dev_dependencies:
   flutter_test:
