--- a/P. Kids Course/p_kids_coures/pubspec.yaml
+++ b/P. Kids Course/p_kids_coures/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_bloc: ^2.1.1
   sqflite: ^1.3.0
   fancy_bottom_navigation: ^0.3.2
+  vertical_card_pager: ^1.3.0
+  random_color: ^1.0.5
 
 dev_dependencies:
   flutter_test:
