--- a/P. Kids Course/p_kids_coures/android/app/build.gradle
+++ b/P. Kids Course/p_kids_coures/android/app/build.gradle
@@ -23,6 +23,7 @@ if (flutterVersionName == null) {
 
 apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -51,4 +52,9 @@ android {
 
 flutter {
     source '../..'
+}
+
+dependencies {
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
 }
