--- a/P. Kids Course/p_kids_coures/android/app/src/main/AndroidManifest.xml
+++ b/P. Kids Course/p_kids_coures/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="pkidscoures"
+        android:label="키즈코스"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
