--- a/P. Kids Course/p_kids_coures/pubspec.yaml
+++ b/P. Kids Course/p_kids_coures/pubspec.yaml
@@ -30,14 +30,15 @@ dependencies:
   cupertino_icons: ^0.1.3
   kopo: ^0.1.1
   http: ^0.12.1
-  vibration: ^1.4.0
-  firebase_messaging: ^6.0.16
   provider:
   flutter_bloc: ^2.1.1
   sqflite: ^1.3.0
   fancy_bottom_navigation: ^0.3.2
   vertical_card_pager: ^1.3.0
   random_color: ^1.0.5
+  firebase_core: ^0.5.0
+  firebase_messaging: ^7.0.0
+  vibration: ^1.4.0
 
 dev_dependencies:
   flutter_test:
